# server/routers/AuthRouter.ts
@@ -1,42 +1,83 @@
-import express, { Router } from "express"
+import express from "express"
 import { AuthServiceSelf } from "../services/auth/AuthService"
 import { ApiError } from "../error/ApiError"
 import { checkAuth } from "../middleware/checkAuth"
-const router: Router = express.Router()
+import { body, cookie, param } from "express-validator"
+import { validationMiddleware } from "../middleware/validationMiddleware"
+const router = express.Router()
 
-router.post("/login/self", async (req, res, next) => {
+router.post(
     // #swagger.tags = ["Auth"]
+    /* #swagger.requestBody = {
+            required: true,
+            content: {
+                "application/json": {
+                    schema: {
+                        $ref: "#/components/schemas/SelfLoginSchema"
+                    }
+                }
+            }
+        } 
+    */
+    "/login/self",
+    body("username").notEmpty().isLength({ min: 3, max: 100 }),
+    body("password")
+        .notEmpty()
+        .isLength({ min: 8, max: 100 })
+        .matches(/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?]).*$/),
+    validationMiddleware,
+    async (req, res, next) => {
+        const { username, password } = req.body
+        const ip = req.ip
+        const userAgent = req.headers["user-agent"]
 
-    const { username, password } = req.body
-    const ip = req.ip
-    const userAgent = req.headers["user-agent"]
+        const result = await AuthServiceSelf.login(username, password, userAgent, ip)
+        res.cookie("refresh", result.refreshToken, {
+            domain: process.env.COOKIE_DOMAIN,
+            sameSite: "lax",
+            httpOnly: true,
+            secure: true,
+        })
+        res.status(200).json({ authorization: result.accessToken })
+    }
+)
 
-    const result = await AuthServiceSelf.login(username, password, userAgent, ip)
-    res.cookie("refresh", result.refreshToken, {
-        domain: process.env.COOKIE_DOMAIN,
-        sameSite: "lax",
-        httpOnly: true,
-        secure: true,
-    })
-    res.status(200).json({ authorization: result.accessToken })
-})
-
-router.post("/register/self", async (req, res, next) => {
+router.post(
     // #swagger.tags = ["Auth"]
+    /* #swagger.requestBody = {
+            required: true,
+            content: {
+                "application/json": {
+                    schema: {
+                        $ref: "#/components/schemas/SelfRegisterSchema"
+                    }
+                }
+            }
+        } 
+    */
+    "/register/self",
+    body("username").notEmpty().isLength({ min: 3, max: 100 }),
+    body("password")
+        .notEmpty()
+        .isLength({ min: 8, max: 100 })
+        .matches(/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?]).*$/),
+    body("email").notEmpty().isEmail(),
+    validationMiddleware,
+    async (req, res, next) => {
+        const { username, email, password } = req.body
+        const ip = req.ip
+        const userAgent = req.headers["user-agent"]
 
-    const { username, email, password } = req.body
-    const ip = req.ip
-    const userAgent = req.headers["user-agent"]
-
-    const result = await AuthServiceSelf.register(username, password, email, userAgent, ip)
-    res.cookie("refresh", result.refreshToken, {
-        domain: process.env.COOKIE_DOMAIN,
-        sameSite: "lax",
-        httpOnly: true,
-        secure: true,
-    })
-    res.status(200).json({ authorization: result.accessToken })
-})
+        const result = await AuthServiceSelf.register(username, password, email, userAgent, ip)
+        res.cookie("refresh", result.refreshToken, {
+            domain: process.env.COOKIE_DOMAIN,
+            sameSite: "lax",
+            httpOnly: true,
+            secure: true,
+        })
+        res.status(200).json({ authorization: result.accessToken })
+    }
+)
 
 router.get("/logout", checkAuth, async (req, res, next) => {
     // #swagger.tags = ["Auth"]
@@ -52,8 +93,9 @@ router.get("/check", checkAuth, (req, res, next) => {
     res.status(200).json({ message: "OK!" })
 })
 
-router.post("/refresh", async (req, res, next) => {
+router.post("/refresh", cookie("refresh").notEmpty().isJWT(), validationMiddleware, async (req, res, next) => {
     // #swagger.tags = ["Auth"]
+    // #swagger.security = [{ "bearerAuth": [] }]
     const { refresh } = req.cookies
 
     const result = await AuthServiceSelf.refresh(refresh)
@@ -66,34 +108,49 @@ router.post("/refresh", async (req, res, next) => {
     res.status(200).json({ authorization: result.accessToken })
 })
 
-router.post("/login/google", async (req, res, next) => {
+router.post(
     // #swagger.tags = ["Auth"]
-    const { accessToken } = req.body
-    const ip = req.ip
-    const userAgent = req.headers["user-agent"]
+    "/login/google",
+    body("accessToken")
+        .notEmpty()
+        .matches(/^ya29\.[A-Za-z0-9\-_\.]+$/),
+    validationMiddleware,
+    async (req, res, next) => {
+        const { accessToken } = req.body
+        const ip = req.ip
+        const userAgent = req.headers["user-agent"]
 
-    const result = await AuthServiceSelf.loginUsingGoogle(accessToken, userAgent, ip)
+        const result = await AuthServiceSelf.loginUsingGoogle(accessToken, userAgent, ip)
 
-    res.cookie("refresh", result.refreshToken, {
-        domain: process.env.COOKIE_DOMAIN,
-        sameSite: "lax",
-        httpOnly: true,
-        secure: true,
-    })
-    res.status(200).json({ authorization: result.accessToken })
-})
+        res.cookie("refresh", result.refreshToken, {
+            domain: process.env.COOKIE_DOMAIN,
+            sameSite: "lax",
+            httpOnly: true,
+            secure: true,
+        })
+        res.status(200).json({ authorization: result.accessToken })
+    }
+)
 
-router.get("/sesssion/close/:session", checkAuth, async (req, res, next) => {
+router.get(
     // #swagger.tags = ["Auth"]
     // #swagger.security = [{ "bearerAuth": [] }]
-    const { session } = req.params
-    //@ts-ignore
-    const user = req.session.user
+    "/sesssion/close/:session",
+    param("session")
+        .notEmpty()
+        .matches(/^\d+[-]\w{32}/),
+    validationMiddleware,
+    checkAuth,
+    async (req, res, next) => {
+        const { session } = req.params
+        //@ts-ignore
+        const user = req.session.user
 
-    const result = await AuthServiceSelf.closeSession(session, user.toString())
+        const result = await AuthServiceSelf.closeSession(session, user.toString())
 
-    res.json({ message: "Ok!" }).status(200)
-})
+        res.json({ message: "Ok!" }).status(200)
+    }
+)
 
 router.get("/session/all", checkAuth, async (req, res, next) => {
     // #swagger.tags = ["Auth"]
